# color-to-table

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
outputs/: fashion_colors_combined.csv
