[project]
name = "color-to-table"
version = "0.1.0"
description = "Color extraction script for fashion objects in still images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "colorspacious>=1.1.2",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
]
